--- a/config/db.php.dist
+++ b/config/db.php.dist
@@ -1,16 +1,7 @@
 <?php
 
 /**
- * This file define BD access infos.
- *
- * PHP version 7
- *
- * @category  PHP
- * @package   PHP_SimpleMVC
- * @author    WCS <contact@wildcodeschool.fr>
- * @license  --
- * @link     https://github.com/WildCodeSchool/simple-mvc
- *
+ * This file define BD access infos
  */
 
 define('APP_DB_USER', 'user');
